
	* TODO:

	DONE - fix gradcheck
	DONE linreg
	DONE mnist2d
	DONE mnist2dy
	DONE mnist2dx
	DONE mnist2dxy
	0000 mnist4d: giving out-of-memory error.
	DONE addingirnn
	0000 addinglstm: gives slightly different result.
	0000 mnistpixels: gives slightly different result.
	0000 rnnlm
	0000 copyseq
	0000 ncelm
	0000 ner
	0000 get all other models to work, sanity check with no array sharing version.
	0000 length(Adding.net.sdict) => 91 after one minibatch, normal?
	0000 reimplement array sharing, make it an optional pass for debugging
	0000 turn CUDArt back to normal
	0000 copy!: softloss@loss.jl:67 ygold copied for gradient. however this may happen twice one for 2arg one for 3arg version of softloss.  prevent that.
	0000 shows that +2 CudaArray comes from add.jl:75 reshape_to_match.  Does this allocate?  No, but it would be still better to get rid.  Also mul.  Also symmetric broadcasting.
	0000 should we perform memory management for stack by keeping around some arrays that get reused?
	0000 test batch resize
	0005 *** work on conditionals in compiler
	0005 - solve the incr problem, user based register sharing may be in trouble.
	0005 - optimize alloc, copy, fill.
	0005 - back: problem with zeroing out the dif0 for back.
	0005 - reimplement S2C using conditionals: adding, mnistpixels.
	0005 - fix the relationship between par/arr and the new reg, use plist for par update options, implement update callbacks, maybe merge par and reg?
	0005 - check/compare number of arrays allocated for forw/back lstm, count number of useless copies and allocations
	0005 - start to clean up data and models. retire the Model interface if ok, only expose Net,forw,back,reset!,update!, let people write their own train/test functions
	0005 - add a copy instruction: but sometimes making variables identical is different from copy, avoid actual copy when user says a=b or return c if possible.
	0005 - back/initback: get rid of seq flag if possible, can we use save?