@@ -56,11 +56,13 @@
 	DONE addingirnn
 	0000 addinglstm: gives slightly different result.
 	0000 mnistpixels: gives slightly different result.
-	0000 rnnlm
+	DONE - fix repeat
+	0000 rnnlm: gives slightly different result.
 	0000 copyseq
 	0000 ncelm
 	0000 ner
 	0000 get all other models to work, sanity check with no array sharing version.
+	0000 examples: use as_symbols option for parse_args
 	0000 length(Adding.net.sdict) => 91 after one minibatch, normal?
 	0000 reimplement array sharing, make it an optional pass for debugging
 	0000 turn CUDArt back to normal
@@ -84,7 +86,6 @@
 	0005 - compound statements that involve axpb or alpha/beta in add/mul.
 	0005 - examples: consolidate train/test functions, maybe demo options.
 	0005 - fix compiler to reuse registers and share intermediate tmp
-	0005 - fix repeat
 	0005 - initsize: ignore forw=false
 	0005 - inittype: fix inittype to check parameters as well as inputs, error if inconsistent, use Float32 if not found.  Add detection of sparse array types. does initsize play well with stype?  what is sparse other than input?  # TODO: What if there is a conflict with par.init or a previous eltype?
 	0005 - make semicolon optional: cannot do it, foo(a=1) is not the same as foo(;a=1) in julia. no, that is true in defition, not in call!
